2008-05-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged xesam-support to indexer-split
	->  svn merge -r 1398:1423 ../xesam-support

2008-05-14  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db-sqlite.[ch]: Removed unused functions.

	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email.[ch]: Pass the TrackerConfig to the
	init() function to avoid using tracker->config.
	
	* src/trackerd/tracker-main.[ch]: Make sure we call all the
	missing _shutdown() functions for modules, like
	tracker_service_manager_shutdown(), etc. 
	
	* src/trackerd/tracker-process-files.c: Don't try to set up signal
	handlers for the HAL object if we don't have HAL support compiled
	in to Tracker.
	
	* src/trackerd/tracker-service-manager.[ch]: Renamed
	tracker_service_manager_term() to _shutdown().
	
	* src/trackerd/tracker-xesam.[ch]: Added a _shutdown() function
	and moved the GHashTable of sessions to this module and out of the
	Tracker struct.

2008-05-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-interface-sqlite.c: No reply queries
	must not immediately return for their arguments might otherwise be
	freed by the caller context, before the GThreadPool thread reached
	reading the argument.

2008-05-14  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db-email.c: 
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db.c: 

	* src/trackerd/tracker-dbus-daemon.c: Changed the "config"
	property to be an object spec instead of a pointer spec. Also
	fixed the way we set the object.

	* src/trackerd/tracker-dbus-search.[ch]: Added "config" and
	"language" properties to be used with the TrackerQueryTree API.

	* src/trackerd/tracker-dbus-xesam.c: 
	* src/trackerd/tracker-xesam-live-search.c: 
	* src/trackerd/tracker-xesam-session.h: Fix includes.

	* src/trackerd/tracker-dbus.[ch]: Use Tracker pointer instead of